# RustGoBench

./: .gitignore  README.MD
data/: docker-compose.yaml  init.sql  users.json
go/: go.mod  go.sum  main.go
rust/: Cargo.toml  main.rs
rust_axum_diesel/: main.rs  schema.rs
rust_axum_pg/: Cargo.toml
rust_axum_pg/src/: db.rs  main.rs  server.rs
rust_axum_pgpool/: Cargo.toml
rust_axum_pgpool/src/: main.rs
rust_ntex/: Cargo.toml  db.rs  main.rs
