[package]
name = "rustbench"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
axum = "0.7.1"
jsonwebtoken = "9.1.0"
serde = "1.0.193"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres"] }
tokio-postgres = "0.7.5"
bb8 = "0.8.1"
bb8-postgres = "0.8.1"

[[bin]]
name = "rustbench"
path = "main.rs"
