[package]
name = "rustbench"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
axum = "0.7.1"
jsonwebtoken = "9.1.0"
serde = "1.0.193"
diesel = { version = "2.1.4", features = ["postgres", "serde_json", "r2d2"] }

[[bin]]
name = "rustbench"
path = "main.rs"
