[package]
name = "rust_axum_pg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
axum = { version = "0.6.16", default-features = false, features = [
    "json",
    "query",
    "headers",
    "http1",
    "tokio",
] }
jsonwebtoken = "9.1.0"
serde = "1.0.193"
tokio-postgres = "0.7.10"
num_cpus = "1.14.0"
futures = "0.3.25"
futures-util = "0.3.25"
hyper = { version = "0.14.23", features = ["http1", "server"] }
serde_json = "1.0.89"
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.4.0", features = ["set-header"] }
