[package]
name = "rust_axum_pgpool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.1", features = ["http2", "json"] }
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros"] }
jsonwebtoken = "9.1.0"
serde = "1.0.193"
tokio-postgres = "0.7.10"
deadpool-postgres = { version = "0.11.0", features = ["rt_tokio_1"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
