[package]
name = "rust_ntex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
codegen-units = 1
lto = true

[dependencies]
ntex = { version = "0.7.2", features = ["tokio"] }
tokio-postgres = "0.7.10"
num_cpus = "1.16"
serde = { version = "1.0.193" }
deadpool-postgres = { version = "0.11.0", features = ["serde"] }
jsonwebtoken = "9.1.0"
derive_more = "0.99.17"

[[bin]]
name = "rust_ntex"
path = "main.rs"
