[package]
name = "rust_ntex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3
codegen-units = 1
panic = 'abort'
lto = "thin"
debug = false
incremental = false
overflow-checks = false

[dependencies]
ntex = { version = "0.7.2", features = ["tokio"] }
tokio-postgres = "0.7.10"
num_cpus = "1.16"
serde = { version = "1.0.193" }
jsonwebtoken = "9.1.0"
derive_more = "0.99.17"

[[bin]]
name = "rust_ntex"
path = "main.rs"
